[package]
name = "ap-index"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
diacritics = "0.2.2"
digest-io = "0.1.0"
reqwest = { version = "0.13.4", features = ["blocking"] }
semver = { version = "1.0.28", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_with = { version = "3.20.0", features = ["hex"] }
sha2 = "0.11.0"
tempfile = "3.27.0"
toml = "1.1.2"
zip = "8.6.0"
